react-app/src/components/PinGrid/PinGrid.css
#pinGrid {
    column-count: 7;
    column-gap: 5px;
    width: 100%;
    height: 100%;

}

#pinCard {
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    cursor: zoom-in;
    margin: 0 auto;
    width: 236px;
    height: 100%;
    margin-bottom: 10px; 
    position: relative;
}

#cardImg {
    width: 100%;
    height: 100%;
}


#pinImg {
    display: flex;
    width: 100%;
    cursor: zoom-in;
    border-radius: 16px;
    object-fit: cover;
  }


#cardTitle {
  display: flex;
  justify-content: flex-start;
  width: 100%;
  margin: 5px;
  padding: 2px;
  font-weight: 700;
}

#pinHeader {
  width: 100%;
  height: 40px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 5px;
  font-weight: 700;
  position: absolute;
  top:0;
}

#pinLeftHeader {
  display: flex;
  gap: 5px;
  align-items: center;
  position: absolute;
  top:20px;
  left: 10px;
  cursor: pointer;
}



#savePinButton {
  height: 35px;
  width: 60px;
  background-color: #E60023;
  border-radius: 19px;
  color: white;
  font-weight: 700;
  font-size: 14px;
  padding: 10px;
  display: flex;
  align-items:  center;
  justify-content: center;
  /* position: relative; */
  position: absolute;
  top:10px;
  right: 5px;
}

#savePinButton:hover {
  background-color: #AD081B;
}



#addPinDropdown {
  display: flex;
  gap: 5px;
  align-items: center;
  position: relative;
  color: black;
}



#dropDownDiv {
  height: 450px;
  width: 350px;
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 0;
  left: -80px;
  z-index: 5;
  border-radius: 10px;
  font-family: 'Lato', sans-serif; 
  font-weight: 700;
  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
  border: #d3d3d3;
  background-color: white;
}

#dropDownDivHead {
  background-color: white;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  height: 20%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 20px;
  color: black;
}

#createBoardDiv {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  width: 100%;
  color: black;
  height: 20%;
  font-size: 20px;
  padding: 10px;
  gap: 10px;
}

#createBoardDiv:hover {
  background-color: #EFEFEF;
  cursor: pointer;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
}

#dropBoard {
  list-style: none;
  background-color: white;
  overflow: scroll;
  padding: 10px;
  width: 100%;;
  height: 300px;

  
  }

  
  #dropBoard > li {
    padding: 15px;
    color: black;
  }
  


  #dropBoard > li:hover {
    background-color: #EFEFEF;
    cursor: pointer;
    border-radius: 6px;
  }
  


#createBoardPlus {
  height: 30px;
  width: 30px;
  background-color: #EFEFEF;
  color: black;
  display: flex;
  justify-content: center;
  align-items: center;
}



/* Media Queries */

@media (min-width: 1008px) and (max-width: 1259px) {
    #pinGrid {
      max-width: 1008px;
      column-count: 4;
    }
  }
  
  @media (min-width: 1260px) and (max-width: 1511px) {
    #pinGrid {
      max-width: 1260px;
      column-count: 5;
    }
  }
  
  @media (min-width: 1512px) and (max-width: 1763px) {
    #pinGrid {
      width: 1512px;
      column-count: 6;
    }
  }
  
  @media (min-width: 1764px) and (max-width: 2015px) {
    #pinGrid {
      width: 1764px;
      column-count: 7;
    }
  }

